# TernSite

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: app.js  index.html  style.css
