[package]
name = "tern-site"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }

# Local crates from TernReader
tern-book = { path = "../TernReader/tools/tern-book" }
tern-image = { path = "../TernReader/tools/tern-image" }

[profile.dev]
opt-level = 1
