[package]
name = "tern-site"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }

# Git crates from TernReader
tern-book = { git = "https://github.com/azw413/TernReader", package = "tern-book" }
tern-image = { git = "https://github.com/azw413/TernReader", package = "tern-image" }

[profile.dev]
opt-level = 1
